--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:18:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:18:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,10 +166,10 @@ Missed Cut</td>
 -1 thru 10</td>
       <td>Will Zalatoris -1
 E thru 9</td>
-      <td class="greyout leftborder">Tony Finau +4
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 13</td>
+      <td class="greyout">Tony Finau +4
 +2 (F)</td>
-      <td class="greyout">Patrick Cantlay +5
-+4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -214,8 +214,8 @@ Missed Cut</td>
 -2 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 13</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -310,8 +310,8 @@ Missed Cut</td>
 -1 thru 9</td>
       <td>Dustin Johnson(W) E
 +2 thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 13</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -348,6 +348,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 6</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Rory McIlroy +1
+-1 thru 17</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
+      <td class="greyout leftborder">Robert MacIntyre +6
++4 thru 14</td>
+      <td class="greyout">Jon Rahm +6
++4 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-8</td>
       <td>Scottie Scheffler -10
@@ -358,26 +374,10 @@ Missed Cut</td>
 -1 thru 17</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 13</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 6</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Rory McIlroy +1
--1 thru 17</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
-      <td class="greyout leftborder">Robert MacIntyre +6
-+4 thru 14</td>
-      <td class="greyout">Jon Rahm +6
-+4 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -390,8 +390,8 @@ Missed Cut</td>
 -1 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 13</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -413,18 +413,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-7</td>
       <td>Scottie Scheffler -10
 -2 thru 6</td>
       <td>Cameron Smith(W) -4
 -2 thru 9</td>
       <td>Matthew Fitzpatrick +3
 +3 thru 12</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -10
+-2 thru 6</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay(W) +4
++3 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 16</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -454,26 +470,10 @@ Missed Cut</td>
 E thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 13</td>
       <td class="greyout">Jon Rahm(W) +6
 +4 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -10
--2 thru 6</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay(W) +5
-+4 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -509,15 +509,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith -4
 -2 thru 9</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
       <td>Will Zalatoris -1
 E thru 9</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -538,6 +538,22 @@ E thru 9</td>
 +2 thru 13</td>
       <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler(W) -10
+-2 thru 6</td>
+      <td>Cameron Smith -4
+-2 thru 9</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
+      <td>Billy Horschel +10
++7 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -585,22 +601,6 @@ E thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -10
--2 thru 6</td>
-      <td>Cameron Smith -4
--2 thru 9</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
-      <td>Billy Horschel +10
-+7 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -700,6 +700,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">6</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Collin Morikawa E
++1 thru 9</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 16</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">6</td>
       <td>Justin Thomas(W) -2
@@ -748,32 +764,16 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">7</td>
-      <td>Will Zalatoris -1
-E thru 9</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Dustin Johnson E
 +2 thru 8</td>
       <td>Rory McIlroy(W) +1
 -1 thru 17</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +6
 +4 thru 16</td>
       <td class="greyout">Jordan Spieth
@@ -781,16 +781,48 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Scottie Scheffler -10
 -2 thru 6</td>
       <td>Dustin Johnson E
 +2 thru 8</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td>Adam Scott +12
 +8 (F)</td>
       <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">9</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
+      <td>Jon Rahm(W) +6
++4 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">9</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Rory McIlroy +1
+-1 thru 17</td>
+      <td>Patrick Cantlay(W) +4
++3 thru 13</td>
+      <td>Jon Rahm +6
++4 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
@@ -812,46 +844,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">10</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
-      <td>Hideki Matsuyama +1
-+4 thru 7</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
-      <td>Jon Rahm(W) +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">10</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
-      <td>Rory McIlroy +1
--1 thru 17</td>
-      <td>Patrick Cantlay(W) +5
-+4 thru 12</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">11</td>
       <td>Collin Morikawa(W) E
 +1 thru 9</td>
       <td>Hideki Matsuyama +1
 +4 thru 7</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td>Jon Rahm +6
 +4 thru 16</td>
       <td class="greyout leftborder">Paul Casey
@@ -861,13 +861,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">11</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td>Jon Rahm +6
 +4 thru 16</td>
       <td class="greyout leftborder">Daniel Berger +7
@@ -893,13 +893,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa E
 +1 thru 9</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td>Tony Finau +4
 +2 (F)</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
       <td>Jon Rahm(W) +6
 +4 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -909,13 +909,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">15</td>
       <td>Dustin Johnson E
 +2 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td>Jon Rahm +6
 +4 thru 16</td>
       <td class="greyout leftborder">Jordan Spieth(W)
