--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:18:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:18:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ body {
 -1 thru 10</td>
       <td>Will Zalatoris -1
 E thru 9</td>
-      <td class="greyout leftborder">Tony Finau +4
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 13</td>
+      <td class="greyout">Tony Finau +4
 +2 (F)</td>
-      <td class="greyout">Patrick Cantlay +5
-+4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -188,6 +188,22 @@ E thru 9</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-5</td>
+      <td>Shane Lowry -5
+-2 thru 6</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 16</td>
+      <td class="greyout">Tyrrell Hatton +8
++6 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
@@ -202,22 +218,6 @@ Missed Cut</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-4</td>
-      <td>Shane Lowry -5
--2 thru 6</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout">Tyrrell Hatton +8
-+6 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -252,6 +252,22 @@ E thru 9</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith(W) -4
+-2 thru 9</td>
+      <td>Collin Morikawa E
++1 thru 9</td>
+      <td>Rory McIlroy +1
+-1 thru 17</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas -2
@@ -262,25 +278,9 @@ Missed Cut</td>
 +4 thru 7</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +4
++3 thru 13</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith(W) -4
--2 thru 9</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
-      <td>Rory McIlroy +1
--1 thru 17</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -333,13 +333,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">15</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa E
 +1 thru 9</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td>Tony Finau +4
 +2 (F)</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
       <td>Jon Rahm(W) +6
 +4 thru 16</td>
       <td class="greyout leftborder">Jordan Spieth
@@ -349,13 +349,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">16</td>
+      <td class="bigbold">15</td>
       <td>Dustin Johnson E
 +2 thru 8</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
       <td>Jon Rahm +6
 +4 thru 16</td>
       <td class="greyout leftborder">Jordan Spieth(W)
