--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:23:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:23:48 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -503,7 +503,7 @@ E thru 11</td>
       <td>Hideki Matsuyama +1
 +4 thru 7</td>
       <td class="greyout leftborder">Tiger Woods +3
-+2 thru 13</td>
++2 thru 14</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -522,6 +522,22 @@ E thru 9</td>
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-2</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
+      <td>Justin Thomas -1
+E thru 11</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Rory McIlroy +1
+-1 thru 17</td>
+      <td class="greyout leftborder">Tiger Woods(W) +3
++2 thru 14</td>
+      <td class="greyout">Viktor Hovland +3
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -588,30 +604,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-1</td>
-      <td>Justin Thomas -1
-E thru 11</td>
-      <td>Will Zalatoris -1
-E thru 9</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
-      <td>Rory McIlroy +1
--1 thru 17</td>
-      <td class="greyout leftborder">Tiger Woods(W) +3
-+2 thru 13</td>
-      <td class="greyout">Viktor Hovland +3
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Corey Conners -2
 -1 thru 9</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Will Zalatoris -1
 E thru 9</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
       <td>Rory McIlroy +1
 -1 thru 17</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -633,6 +633,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa(W) -1
+E thru 10</td>
+      <td>Justin Thomas -1
+E thru 11</td>
+      <td>Rory McIlroy +1
+-1 thru 17</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Tiger Woods +3
++2 thru 14</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -659,28 +675,12 @@ Missed Cut</td>
       <td>Corey Conners -2
 -1 thru 9</td>
       <td>Tiger Woods +3
-+2 thru 13</td>
++2 thru 14</td>
       <td>Jon Rahm(W) +6
 +4 thru 16</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -1
-E thru 11</td>
-      <td>Collin Morikawa(W) E
-+1 thru 9</td>
-      <td>Rory McIlroy +1
--1 thru 17</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+2 thru 13</td>
-      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -701,11 +701,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Will Zalatoris -1
 E thru 9</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Cantlay +4
@@ -797,17 +797,33 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">9</td>
       <td>Corey Conners(W) -2
 -1 thru 9</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Robert MacIntyre +6
 +4 thru 14</td>
       <td>Jon Rahm +6
 +4 thru 16</td>
       <td class="greyout leftborder">Daniel Berger +7
 +5 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">10</td>
+      <td>Collin Morikawa(W) -1
+E thru 10</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
+      <td>Patrick Cantlay +4
++3 thru 13</td>
+      <td>Jon Rahm +6
++4 thru 16</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -844,22 +860,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">11</td>
-      <td>Collin Morikawa(W) E
-+1 thru 9</td>
-      <td>Hideki Matsuyama +1
-+4 thru 7</td>
-      <td>Patrick Cantlay +4
-+3 thru 13</td>
-      <td>Jon Rahm +6
-+4 thru 16</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">12</td>
       <td>Justin Thomas(W) -1
@@ -877,9 +877,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">13</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
+      <td class="bigbold">12</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
       <td>Tony Finau +4
