--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:23:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:23:48 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -237,11 +237,11 @@ E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Cameron Smith(W) -4
 -2 thru 9</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Rory McIlroy +1
 -1 thru 17</td>
       <td>Patrick Cantlay +4
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Justin Thomas(W) -1
 E thru 11</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Will Zalatoris -1
 E thru 9</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +7
@@ -269,11 +269,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Justin Thomas -1
 E thru 11</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Sungjae Im +1
 +4 thru 7</td>
       <td>Viktor Hovland(W) +3
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">9</td>
       <td>Corey Conners(W) -2
 -1 thru 9</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Jon Rahm +6
 +4 thru 16</td>
       <td>Robert MacIntyre +6
@@ -317,9 +317,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">13</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
+      <td class="bigbold">12</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Reed +4
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa -1
+E thru 10</td>
       <td>Patrick Cantlay +4
 +3 thru 13</td>
       <td>Tony Finau +4
